<resources>
    <string name="app_name">USB-SMD-RLC-BM8232-v01</string>
    <string name="devices">USB Devices</string>

    <string name="rbutt_auto">Auto</string>
    <string name="rbutt_f95">f95</string>
    <string name="rbutt_f1k">f1k</string>
    <string name="rbutt_f10k">f10k</string>
    <string name="rbutt_f95k">f95k</string>
    <string name="rbutt_f160k">160k</string>

    <string name="rlc_table_string_none">--</string>
    <string name="rlc_table_string_line">----</string>
    <string name="rlc_table_string_b_line">------</string>

    <string name="set_relative">Set relative</string>
    <string name="eqs_spinner_text">Eq S</string>
    <string name="gen_type_spinner_text">Wave</string>

</resources>
