<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:example="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/controlLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <ToggleButton
            android:id="@+id/controlLineRts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48sp"
            android:textOff="RTS"
            android:textOn="RTS" />

        <ToggleButton
            android:id="@+id/controlLineCts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48sp"
            android:clickable="false"
            android:textColor="@android:color/secondary_text_dark"
            android:textOff="CTS"
            android:textOn="CTS" />

        <View
            android:layout_height="match_parent"
            android:layout_width="6dp" />

        <ToggleButton
            android:id="@+id/controlLineDtr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48sp"
            android:textOff="DTR"
            android:textOn="DTR" />

        <ToggleButton
            android:id="@+id/controlLineDsr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:minWidth="48sp"
            android:textColor="@android:color/secondary_text_dark"
            android:textOff="DSR"
            android:textOn="DSR" />

        <View
            android:layout_height="match_parent"
            android:layout_width="6dp" />

        <ToggleButton
            android:id="@+id/controlLineCd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:minWidth="48sp"
            android:textColor="@android:color/secondary_text_dark"
            android:textOff="CD"
            android:textOn="CD" />

        <ToggleButton
            android:id="@+id/controlLineRi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48sp"
            android:clickable="false"
            android:textColor="@android:color/secondary_text_dark"
            android:textOff="RI"
            android:textOn="RI" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:background="?android:attr/listDivider"
        android:layout_height="2dp" />

    <de.kai_morich.simple_usb_terminal.ExpandablePanel
        android:id="@+id/expandablePanel"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        example:collapsedHeight="50dp"
        example:content="@+id/value"
        example:handle="@+id/expand"
        example:isviewgroup="true"
        example:viewgroup="@+id/expandL" >

        <LinearLayout
            android:id="@+id/value"
            android:layout_width="fill_parent"
            android:layout_height="240dp"
            android:orientation="vertical"
            android:paddingStart="1dp"
            android:weightSum="200">

            <TextView
                android:id="@+id/value_text"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:maxHeight="20dip" />

            <RadioGroup
                android:id="@+id/RLCRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/radio_auto"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/rbutt_auto" />

                <RadioButton
                    android:id="@+id/radio_f95"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/rbutt_f95" />

                <RadioButton
                    android:id="@+id/radio_f1k"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/rbutt_f1k" />

                <RadioButton
                    android:id="@+id/radio_f10k"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/rbutt_f10k" />

                <RadioButton
                    android:id="@+id/radio_f95k"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/rbutt_f95k" />

                <RadioButton
                    android:id="@+id/radio_f160k"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/rbutt_f160k" />

            </RadioGroup>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/expandL"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:weightSum="100">

            <View
                android:id="@+id/view"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="30"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/expand"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="70"
                android:text="More" />
        </LinearLayout>
    </de.kai_morich.simple_usb_terminal.ExpandablePanel>

    <TextView
        android:id="@+id/receive_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:freezesText="true"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <View
        android:layout_width="match_parent"
        android:background="?android:attr/listDivider"
        android:layout_height="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/send_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="text|textNoSuggestions"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_send_white_24dp" />
    </LinearLayout>

</LinearLayout>

